Text alignment fixes on site notices

--- a/app/assets/stylesheets/ui/notices.css
+++ b/app/assets/stylesheets/ui/notices.css
@@ -1,4 +1,6 @@
 .notice {
+  display: flex;
+  align-items: center;
   position: relative;
   background: #95ffd5;
   color: #555;
@@ -7,24 +9,20 @@
   box-shadow: 0 0 5px 0 rgba(0,0,0,0.3);
   margin-bottom: 10px;
 }
-.notice a {
-  text-align: center;
-  height: 100%;
-  padding: 8px;
-  line-height: 100%;
-  vertical-align: middle;
-  float: left;
-}
 .notice .actions {
+  align-items: center;
   position: absolute;
   top: 0;
   right: 0;
   bottom: 0;
 }
-.notice a:hover {
+.notice .actions a {
+  padding: 8px;
+}
+.notice .actions a:hover {
   background: rgba(0,0,0,0.1);
 }
-.notice a:active {
+.notice .actions a:active {
   background: rgba(0,0,0,0.2);
 }
 
